src/tests/fixtures/extend_interface/addStringFieldToNonGrats.invalid.ts.expected
-----------------
INPUT
----------------- 
type SomeNonGratsType = string;

/** @gqlField */
export function greeting(someType: SomeNonGratsType): string {
  return `Hello ${someType}!`;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/addStringFieldToNonGrats.invalid.ts:4:36 - error: Unable to resolve type reference. In order to generate a GraphQL schema, Grats needs to be able to resolve all type references to their declaration. However this reference could not be resolved. Is it possible that this type is not defined in this file?

4 export function greeting(someType: SomeNonGratsType): string {
                                     ~~~~~~~~~~~~~~~~
